# text-preprocessing

./: README.md  __init__.py  preprocessor.py  pyproject.toml  setup.py
tests/: conftest.py  test_modernizer.py  test_philo.py  test_preprocessor.py  test_spacy_models.py  test_tokens.py
tests/fixtures/philo/data/: toms.db
tests/fixtures/philo/data/words_and_philo_ids/: 1.lz4  2.lz4  3.lz4  4.lz4  5.lz4
tests/fixtures/plain/: germinal.txt  hamlet.txt  moby_dick.txt  montaigne.txt
text-processing/: modernize.py
text_preprocessing/: __init__.py  modernize.py  modernizer.py  preprocessor.py  preprocessor_helpers.py  spacy_helpers.py  text_loader.py
text_preprocessing/lang/: fr_dict.py
textprocessing/: __init__.py  preprocessor.py
